metal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
  - host: xcite.asrc.albany.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
  tls:
    - hosts:
      - xcite.asrc.albany.edu
      secretName: letsencrypt-production
